Remote entities added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">IntegratedExampleV1</string>
+    <string name="backend_error">Server request error...</string>
 </resources>
